modules/dispatcharr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcharr
  namespace: dispatcharr
spec:
  defaultBackend:
    service:
      name: dispatcharr
      port:
        name: main
  ingressClassName: tailscale
  tls:
  - hosts:
    - dispatcharr
